# MyProjectAppEdit

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  pdfeditor.cpp  pdfeditor.h  resources.qrc
Model/: certificate.cpp  certificate.h  hsmconfig.cpp  hsmconfig.h  signature.cpp  signature.h
widgetsConfig/: clickablelabel.cpp  clickablelabel.h  pindialog.cpp  pindialog.h  selectslotdialog.cpp  selectslotdialog.h  toast.cpp  toast.h
